--- a/mdz-dzp-commons-xml/pom.xml
+++ b/mdz-dzp-commons-xml/pom.xml
@@ -18,7 +18,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-    
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>    
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
