--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
   <modules>
     <module>mdz-dzp-commons-xml</module>
+    <module>mdz-dzp-commons-io</module>
   </modules>
   
   <distributionManagement>
