--- a/mdz-dzp-commons-io/pom.xml
+++ b/mdz-dzp-commons-io/pom.xml
@@ -11,4 +11,20 @@
   <artifactId>mdz-dzp-commons-io</artifactId>
   <packaging>jar</packaging>
   <name>MDZ DZP Commons IO</name>
+  <version>1.0.0-SNAPSHOT</version>
+  
+  <dependencies>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+    </dependency>
+  </dependencies>
 </project>
