--- a/mdz-dzp-commons-yaml/pom.xml
+++ b/mdz-dzp-commons-yaml/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
-      <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
