--- a/digitalcollections-commons-xml/pom.xml
+++ b/digitalcollections-commons-xml/pom.xml
@@ -3,29 +3,32 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <groupId>org.mdz.dzp.commons</groupId>
-    <artifactId>mdz-dzp-commons</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <groupId>de.digitalcollections.commons</groupId>
+    <artifactId>digitalcollections-commons</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
   
-  <artifactId>mdz-dzp-commons-xml</artifactId>
+  <artifactId>digitalcollections-commons-xml</artifactId>
   <packaging>jar</packaging>
-  <name>MDZ DZP Commons XML</name>
+  <name>DigitalCollections Commons XML</name>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
+      <version>${version.junit}</version>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
+      <version>${version.assertj}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>${version.slf4j}</version>
     </dependency>
   </dependencies>
 </project>
