--- a/digitalcollections-commons-yaml/pom.xml
+++ b/digitalcollections-commons-yaml/pom.xml
@@ -2,32 +2,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.mdz.dzp.commons</groupId>
-    <artifactId>mdz-dzp-commons</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <groupId>de.digitalcollections.commons</groupId>
+    <artifactId>digitalcollections-commons</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>mdz-dzp-commons-yaml</artifactId>
+  <artifactId>digitalcollections-commons-yaml</artifactId>
   <packaging>jar</packaging>
-  <name>MDZ DZP Commons YAML</name>
+  <name>DigitalCollections Commons YAML</name>
   <dependencies>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+      <version>${version.assertj}</version>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>1.17</version>
+      <version>${version.snakeyaml}</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
       <optional>true</optional>
+      <version>${version.joda-time}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
+      <version>${version.junit}</version>
     </dependency>
   </dependencies>
 </project>
