changed display name to match name convention

--- a/digitalcollections-commons-xml/pom.xml
+++ b/digitalcollections-commons-xml/pom.xml
@@ -10,7 +10,7 @@
   
   <artifactId>digitalcollections-commons-xml</artifactId>
   <packaging>jar</packaging>
-  <name>DigitalCollections Commons XML</name>
+  <name>DigitalCollections: Commons XML</name>
 
   <dependencies>
     <dependency>
