--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>0-SNAPSHOT</version>
   <packaging>pom</packaging>
     
-  <name>DigitalCollections Commons (Parent)</name>
+  <name>DigitalCollections: Commons (Parent)</name>
   <description>
     Parent for all DigitalCollections Commons projects.
   </description>
