--- a/digitalcollections-commons-springmvc/pom.xml
+++ b/digitalcollections-commons-springmvc/pom.xml
@@ -8,28 +8,26 @@
     <version>1.1.0-SNAPSHOT</version>
   </parent>
   
-  <artifactId>digitalcollections-commons-yaml</artifactId>
+  <artifactId>digitalcollections-commons-springmvc</artifactId>
   <packaging>jar</packaging>
-  <name>DigitalCollections: Commons YAML</name>
+  <name>DigitalCollections: Commons Spring MVC</name>
   
   <dependencies>
     <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
     </dependency>
     <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
-      <optional>true</optional>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf</artifactId>
     </dependency>
   </dependencies>
 </project>
