--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>digitalcollections-commons-xml</module>
     <module>digitalcollections-commons-yaml</module>
     <module>digitalcollections-commons-server</module>
+    <module>digitalcollections-commons-springmvc</module>
   </modules>
 
   <name>DigitalCollections: Commons (Parent)</name>
@@ -32,8 +33,11 @@
     <version.logback>1.1.7</version.logback>
     <version.logstash>4.7</version.logstash>
     <version.servlet-api>3.1.0</version.servlet-api>
-    <version.slf4j>1.7.21</version.slf4j>
+    <version.slf4j>1.7.22</version.slf4j>
     <version.snakeyaml>1.17</version.snakeyaml>
+    <version.spring-web>4.2.5.RELEASE</version.spring-web>
+    <version.spring-webmvc>4.2.5.RELEASE</version.spring-webmvc>
+    <version.thymeleaf>2.1.4.RELEASE</version.thymeleaf>
         
     <!-- Plugin versions -->
     <version.jacoco-maven-plugin>0.7.7.201606060606</version.jacoco-maven-plugin>
@@ -44,6 +48,77 @@
     <version.nexus-staging-maven-plugin>1.6.7</version.nexus-staging-maven-plugin>
     <version.versions-maven-plugin>2.3</version.versions-maven-plugin>
   </properties>
+  
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${version.logback}</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${version.logback}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.maxmind.geoip2</groupId>
+        <artifactId>geoip2</artifactId>
+        <version>${version.geoip}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${version.servlet-api}</version>
+      </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>${version.joda-time}</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <scope>test</scope>
+        <version>${version.junit}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.logstash.logback</groupId>
+        <artifactId>logstash-logback-encoder</artifactId>
+        <version>${version.logstash}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>${version.assertj}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>${version.snakeyaml}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${version.slf4j}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${version.spring-web}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${version.spring-webmvc}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf</artifactId>
+        <version>${version.thymeleaf}</version>
+      </dependency>
+    </dependencies>  
+  </dependencyManagement>
   
   <build>
     <plugins>
