--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>digitalcollections-commons-yaml</module>
     <module>digitalcollections-commons-server</module>
     <module>digitalcollections-commons-springmvc</module>
+    <module>digitalcollections-commons-springaop</module>
   </modules>
 
   <name>DigitalCollections: Commons (Parent)</name>
@@ -26,6 +27,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     
     <!-- Dependency versions -->
+    <version.aspectjweaver>1.8.10</version.aspectjweaver>
     <version.assertj>3.5.2</version.assertj>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
@@ -36,6 +38,8 @@
     <version.servlet-api>3.1.0</version.servlet-api>
     <version.slf4j>1.7.22</version.slf4j>
     <version.snakeyaml>1.17</version.snakeyaml>
+    <version.spring-aop>4.2.5.RELEASE</version.spring-aop>
+    <version.spring-context>4.2.5.RELEASE</version.spring-context>
     <version.spring-web>4.2.5.RELEASE</version.spring-web>
     <version.spring-webmvc>4.2.5.RELEASE</version.spring-webmvc>
     <version.thymeleaf>2.1.4.RELEASE</version.thymeleaf>
@@ -89,6 +93,11 @@
         <version>${version.logstash}</version>
       </dependency>
       <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>${version.aspectjweaver}</version>
+      </dependency>
+      <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <version>${version.assertj}</version>
@@ -108,6 +117,16 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${version.slf4j}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+        <version>${version.spring-aop}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${version.spring-context}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
