--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <version.spring-context>4.3.6.RELEASE</version.spring-context>
     <version.spring-web>4.3.6.RELEASE</version.spring-web>
     <version.spring-webmvc>4.3.6.RELEASE</version.spring-webmvc>
+    <version.spring-security>4.2.1.RELEASE</version.spring-security>
     <version.thymeleaf>3.0.3.RELEASE</version.thymeleaf>
         
     <!-- Plugin versions -->
@@ -70,6 +71,16 @@
         <groupId>com.maxmind.geoip2</groupId>
         <artifactId>geoip2</artifactId>
         <version>${version.geoip}</version>
+      </dependency>
+      <dependency>
+        <groupId>info.solidsoft.mockito</groupId>
+        <artifactId>mockito-java8</artifactId>
+        <version>2.0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt</artifactId>
+        <version>0.7.0</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -137,6 +148,16 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
         <version>${version.spring-webmvc}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${version.spring-security}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-web</artifactId>
+        <version>${version.spring-security}</version>
       </dependency>
       <dependency>
         <groupId>org.thymeleaf</groupId>
