--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <version.assertj>3.5.2</version.assertj>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
+    <version.jackson-databind>2.8.6</version.jackson-databind>
     <version.joda-time>2.9.4</version.joda-time>
     <version.junit>4.12</version.junit>
     <version.logback>1.1.9</version.logback>
@@ -66,6 +67,11 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
         <version>${version.logback}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${version.jackson-databind}</version>
       </dependency>
       <dependency>
         <groupId>com.maxmind.geoip2</groupId>
