--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <version.thymeleaf>3.0.3.RELEASE</version.thymeleaf>
         
     <!-- Plugin versions -->
-    <version.jacoco-maven-plugin>0.7.7.201606060606</version.jacoco-maven-plugin>
+    <version.jacoco-maven-plugin>0.7.9</version.jacoco-maven-plugin>
     <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
     <version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
     <version.maven-javadoc-plugin>2.10.4</version.maven-javadoc-plugin>
