--- a/digitalcollections-commons-springmvc/pom.xml
+++ b/digitalcollections-commons-springmvc/pom.xml
@@ -64,5 +64,11 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.logstash.logback</groupId>
+      <artifactId>logstash-logback-encoder</artifactId>
+      <version>4.8</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 </project>
