--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,13 @@
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson-databind>2.8.6</version.jackson-databind>
+    <version.jjwt>0.7.0</version.jjwt>
     <version.joda-time>2.9.4</version.joda-time>
     <version.junit>4.12</version.junit>
     <version.logback>1.1.9</version.logback>
     <version.logstash>4.7</version.logstash>
     <version.mockito-java8>2.0.1</version.mockito-java8>
+    <version.mockito-core>2.7.6</version.mockito-core>
     <version.servlet-api>3.1.0</version.servlet-api>
     <version.slf4j>1.7.22</version.slf4j>
     <version.snakeyaml>1.17</version.snakeyaml>
@@ -88,7 +90,7 @@
       <dependency>
         <groupId>io.jsonwebtoken</groupId>
         <artifactId>jjwt</artifactId>
-        <version>0.7.0</version>
+        <version>${version.jjwt}</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -125,6 +127,12 @@
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-core</artifactId>
         <version>${version.hamcrest-core}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${version.mockito-core}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
