--- a/digitalcollections-commons-yaml/pom.xml
+++ b/digitalcollections-commons-yaml/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>digitalcollections-commons</artifactId>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.2.2</version>
   </parent>
   
   <artifactId>digitalcollections-commons-yaml</artifactId>
