--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: java
+
 jdk:
-- oraclejdk8
+  - oraclejdk8
+
 before_script:
-- if [ ! -z "$TRAVIS_TAG" ]; then mvn versions:set -DnewVersion=$TRAVIS_TAG; fi
+  - if [ ! -z "$TRAVIS_TAG" ]; then mvn versions:set -DnewVersion=$TRAVIS_TAG; fi
+
 script:
-- mvn clean install
+  - mvn clean install
+
 after_success:
-- bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)
+  - if [[ "${TRAVIS_TAG}" == *"SNAPSHOT" ]] || [[ ${TRAVIS_TAG} == '' ]]; then mvn deploy; fi
+
 deploy:
   provider: releases
   api_key:
