--- a/digitalcollections-commons-springaop/pom.xml
+++ b/digitalcollections-commons-springaop/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>digitalcollections-commons</artifactId>
-    <version>1.2.3</version>
+    <version>1.2.4-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons Spring AOP</name>
