--- a/dc-commons-springmvc/pom.xml
+++ b/dc-commons-springmvc/pom.xml
@@ -4,13 +4,13 @@
   
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
-    <artifactId>digitalcollections-commons</artifactId>
+    <artifactId>dc-commons</artifactId>
     <version>1.2.4-SNAPSHOT</version>
   </parent>
   
-  <artifactId>digitalcollections-commons-springmvc</artifactId>
-  <packaging>jar</packaging>
   <name>DigitalCollections: Commons Spring MVC</name>
+  <artifactId>dc-commons-springmvc</artifactId>
+  <packaging>jar</packaging>
   
   <dependencies>
     <dependency>
