--- a/dc-commons-validation/pom.xml
+++ b/dc-commons-validation/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  
   <parent>
-    <artifactId>digitalcollections-commons</artifactId>
     <groupId>de.digitalcollections.commons</groupId>
+    <artifactId>dc-commons</artifactId>
     <version>1.2.4-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>digitalcollections-commons-validation</artifactId>
   <name>DigitalCollections: Commons Validation</name>
+  <artifactId>dc-commons-validation</artifactId>
 
   <dependencies>
     <dependency>
