Add commons feign module

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>dc-commons-yaml</module>
     <module>dc-commons-springdata</module>
     <module>dc-commons-jdbi</module>
+    <module>dc-commons-feign</module>
   </modules>
 
   <name>DigitalCollections: Commons (Parent)</name>
