--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   
   <groupId>de.digitalcollections.commons</groupId>
   <artifactId>dc-commons</artifactId>
-  <version>1.2.5-SNAPSHOT</version>
+  <version>1.2.5</version>
   <packaging>pom</packaging>
     
   <modules>
