--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>1.2.7</version>
+    <version>1.3.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons JDBI</name>
@@ -14,13 +14,13 @@
   <packaging>jar</packaging>
   
   <properties>
-    <version.jdbi3>3.0.0-beta1</version.jdbi3>
+    <version.jdbi3>3.0.1</version.jdbi3>
   </properties>
   
   <dependencies>
     <dependency>
       <groupId>org.jdbi</groupId>
-      <artifactId>jdbi3</artifactId>
+      <artifactId>jdbi3-core</artifactId>
       <version>${version.jdbi3}</version>
     </dependency>
   </dependencies>
