--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <version.aspectjweaver>1.8.10</version.aspectjweaver>
     <version.assertj>3.5.2</version.assertj>
     <version.commons-lang3>3.4</version.commons-lang3>
-    <version.dc-core-model>2.0.1</version.dc-core-model>
+    <version.dc-core-model>2.1.0-SNAPSHOT</version.dc-core-model>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson-databind>2.8.6</version.jackson-databind>
@@ -48,12 +48,12 @@
     <version.servlet-api>3.1.0</version.servlet-api>
     <version.slf4j>1.7.22</version.slf4j>
     <version.snakeyaml>1.17</version.snakeyaml>
-    <version.spring-aop>4.3.6.RELEASE</version.spring-aop>
-    <version.spring-beans>4.3.6.RELEASE</version.spring-beans>
-    <version.spring-context>4.3.6.RELEASE</version.spring-context>
+    <version.spring-aop>5.0.4.RELEASE</version.spring-aop>
+    <version.spring-beans>5.0.4.RELEASE</version.spring-beans>
+    <version.spring-context>5.0.4.RELEASE</version.spring-context>
     <version.spring-data-commons>1.13.4.RELEASE</version.spring-data-commons>
-    <version.spring-web>4.3.6.RELEASE</version.spring-web>
-    <version.spring-webmvc>4.3.6.RELEASE</version.spring-webmvc>
+    <version.spring-web>5.0.4.RELEASE</version.spring-web>
+    <version.spring-webmvc>5.0.4.RELEASE</version.spring-webmvc>
     <version.spring-security>4.2.1.RELEASE</version.spring-security>
     <version.thymeleaf>3.0.7.RELEASE</version.thymeleaf>
 
