--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -9,8 +9,8 @@
     <version>1.3.0-SNAPSHOT</version>
   </parent>
 
-  <name>DigitalCollections: Commons Spring Boot (for Spring Boot 1.5)</name>
-  <artifactId>dc-commons-springboot-1.5</artifactId>
+  <name>DigitalCollections: Commons Spring Boot</name>
+  <artifactId>dc-commons-springboot</artifactId>
   <packaging>jar</packaging>
 
   <dependencies>
