--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <version.assertj>3.5.2</version.assertj>
     <version.commons-beanutils>1.9.3</version.commons-beanutils>
     <version.commons-lang3>3.4</version.commons-lang3>
-    <version.dc-core-model>2.1.0-SNAPSHOT</version.dc-core-model>
+    <version.dc-core-model>2.1.0</version.dc-core-model>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson>2.9.4</version.jackson>
