--- a/dc-commons-file/src/main/resources/SpringConfigCommonsFile-PROD.properties
+++ b/dc-commons-file/src/main/resources/SpringConfigCommonsFile-PROD.properties
@@ -1,3 +1,3 @@
-multiPatternResolvingFile=classpath:/de/digitalcollections/core/config/multiPatternResolving-PROD.yml
+multiPatternResolvingFile=classpath:/multiPatternResolving-PROD.yml
 resourceRepository.managedPathFactory.folderpath=/local/resourceRepository
-resourceRepository.managedPathFactory.namespace=bsb
+resourceRepository.managedPathFactory.namespace=dico
