--- a/dc-commons-file/src/main/resources/SpringConfigCommonsFile-local.properties
+++ b/dc-commons-file/src/main/resources/SpringConfigCommonsFile-local.properties
@@ -1,3 +1,3 @@
-multiPatternResolvingFile=classpath:/de/digitalcollections/core/config/multiPatternResolving-local.yml
+multiPatternResolvingFile=classpath:/multiPatternResolving-local.yml
 resourceRepository.managedPathFactory.folderpath=~/resourceRepository
-resourceRepository.managedPathFactory.namespace=bsb
+resourceRepository.managedPathFactory.namespace=dico
