--- a/dc-commons-file/src/test/resources/SpringConfigCommonsFile-TEST.properties
+++ b/dc-commons-file/src/test/resources/SpringConfigCommonsFile-TEST.properties
@@ -1,3 +1,3 @@
 multiPatternResolvingFile=classpath:/multiPatternResolving-TEST.yml
 resourceRepository.managedPathFactory.folderpath=/src/test/resources/repository
-resourceRepository.managedPathFactory.namespace=de.digitalcollections.core.data.stream
+resourceRepository.managedPathFactory.namespace=dico
