--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ script:
 - mvn clean install
 after_success:
 - bash <(curl -s https://codecov.io/bash)
-- if [ -z "$TRAVIS_TAG" ]; then mvn deploy -B -DskipTests=true --settings settings.xml;
-  fi
+- if [ -z "$TRAVIS_TAG" ]; then mvn deploy -B -DskipTests=true --settings settings.xml; fi
 deploy:
   provider: releases
   api_key:
